--- a/shopping-cart-v2/Jenkinsfile
+++ b/shopping-cart-v2/Jenkinsfile
@@ -2,12 +2,12 @@ pipeline {
 
     agent { node { label 'maven' } }
 
-    environment { APP_NAMESPACE = 'RHT_OCP4_DEV_USER-recover' }
+    environment { APP_NAMESPACE = 'ackkfj-recover' }
 
     stages {
 
         stage('Test') {
-
+            options { timeout(time: 50, unit: 'SECONDS') }
             steps {
 
                 dir('shopping-cart-v2') {
